<?xml version="1.0"?>
<package>
  <name>r1mini_gui_teleop</name>
  <version>0.1.0</version>
  <description>

     r1mini_gui_teleop

  </description>
  <maintainer email="kyuhyong@omorobot.com">KyuhyongYou</maintainer>
  <author email="kyuhyong@omorobot.com">KyuhyongYou</author>
  <url type="website">http://omorobot.com</url>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

 
</package>
